--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     compile 'com.android.support:cardview-v7:+'
     compile 'de.hdodenhof:circleimageview:1.3.0'
     compile 'com.android.support:design:26.+'
+    compile 'com.google.android.gms:play-services-maps:10.2.1'
 
     testCompile 'junit:junit:4.12'
 }
