--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,8 +31,14 @@
             </intent-filter>
         </activity>
         <activity android:name=".Gui.ConsultaActivity" />
-        <activity android:name=".Gui.FornecedorListaActivity" />
         <activity android:name=".Gui.GuiActivity"></activity>
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
+        <activity
+                  android:name=".Gui.MapsActivity"
+                  android:label="@string/maps"/>
     </application>
 
 </manifest>
