Criação do "esqueceu senha" e ajustes no login

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,8 @@
         </activity>
         <activity android:name=".Gui.ConsultaActivity" />
         <activity android:name=".Gui.GuiActivity" />
+        <activity android:name=".Gui.EsqueceuSenhaActivity" />
+
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
